--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ license = "MIT"
 
 [dependencies]
 anyhow = "1.0.81"
+axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
 base64 = "0.22.0"
 blake3 = "1.5.1"
 clap = { version = "4.5.3", features = ["derive"] }
@@ -18,4 +19,7 @@ rand = "0.8.5"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 serde_yaml = "0.9.33"
+tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "net", "fs", "macros"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 zxcvbn = "2.2.2"
